# ai-testpilot-x

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  SECURITY.md  SKILL.md  api.py  app.py  config.py  docker-compose.yml  index.html  mkdocs.yml  orchestrator.py  packages.txt  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  testpilot.yaml.example
.github/workflows/: ai-quality-gate.yml  docs.yml  publish.yml  testpilot-ci.yml
.streamlit/: config.toml  secrets.toml.example
agents/: __init__.py  api_agent.py  base_agent.py  bug_agent.py  execution_agent.py  healing_agent.py  index.html  registry.py  report_agent.py  requirement_agent.py  selenium_agent.py  testcase_agent.py  verification_agent.py
agents/api-agent/: index.html
agents/bug-agent/: index.html
agents/execution-agent/: index.html
agents/healing-agent/: index.html
agents/report-agent/: index.html
agents/requirement-agent/: index.html
agents/selenium-agent/: index.html
agents/testcase-agent/: index.html
agents/verification-agent/: index.html
architecture/: index.html
changelog/: index.html
ci-cd/: index.html
cli/: __init__.py  cmd_analyze.py  cmd_bugs.py  cmd_dashboard.py  cmd_init.py  cmd_report.py  cmd_run.py  main.py
cli-reference/: index.html
configuration/: index.html
core/: code_validator.py  event_bus.py  explain_engine.py  llm_client.py  rag_engine.py  screenshot_utils.py
docs/: architecture.md  changelog.md  ci-cd.md  cli-reference.md  configuration.md  getting-started.md  index.md  python-api.md
docs/agents/: api-agent.md  bug-agent.md  execution-agent.md  healing-agent.md  index.md  report-agent.md  requirement-agent.md  selenium-agent.md  testcase-agent.md  verification-agent.md
docs/superpowers/specs/: 2026-05-29-ai-testpilot-x-design.md
execution/grids/: selenium_grid.py
execution/runners/: api_runner.py  selenium_runner.py
getting-started/: index.html
memory/: bug_memory.py  conversation_memory.py  execution_memory.py
models/: base_model.py  claude.py  gemini.py  openai.py
monitoring/: logger.py  metrics.py  tracing.py
pages/: 01_home.py  02_test_generator.py  03_selenium_generator.py  04_api_tester.py  05_bug_analyzer.py  06_reports.py  07_workflow_studio.py  08_knowledge_base.py  _css.py
prompts/: api_prompt.txt  bug_prompt.txt  healing_prompt.txt  report_prompt.txt  requirement_prompt.txt  selenium_prompt.txt  testcase_prompt.txt  verification_prompt.txt
python-api/: index.html
schemas/: api_test_schema.py  bug_schema.py  error_schema.py  execution_schema.py  global_state.py  report_schema.py  requirement_schema.py  test_result_schema.py  testcase_schema.py  verification_schema.py
search/: search_index.json
storage/: db.py
storage/models/: bugs.py  executions.py  reports.py  requirements.py  testcases.py  trust_domains.py
stylesheets/: extra.css
superpowers/specs/2026-05-29-ai-testpilot-x-design/: index.html
tests/: test_agents.py  test_config.py  test_execution.py  test_llm_client.py  test_schemas.py  test_storage.py
